--- a/package.json
+++ b/package.json
@@ -22,13 +22,36 @@
   "homepage": "https://github.com/caromurp/solidz#readme",
   "dependencies": {
     "axios": "^0.21.0",
+    "babel-eslint": "^10.1.0",
+    "bootstrap": "^4.5.3",
     "concurrently": "^5.3.0",
     "cookie-session": "^1.4.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.10.18",
+    "mongoose": "^5.10.11",
     "nodemon": "^2.0.6",
+    "parcel": "^1.12.4",
     "parcel-bundler": "^1.12.4",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
-  }
+    "react-bootstrap": "^1.4.0",
+    "react-dom": "^17.0.1",
+    "react-is": "^17.0.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "styled-components": "^5.2.1"
+  },
+  "devDependencies": {
+    "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-jsx-a11y": "^6.3.0",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-hooks": "^4 || ^3 || ^2.3.0 || ^1.7.0"
+  },
+  "browserslist": [
+    "last 3 and_chr versions",
+    "last 3 chrome versions",
+    "last 3 opera versions",
+    "last 3 ios_saf versions",
+    "last 3 safari versions"
+  ]
 }
